Meetup Organisers will not show under Members

--- a/systers_portal/templates/meetup/members.html
+++ b/systers_portal/templates/meetup/members.html
@@ -3,7 +3,7 @@
 {% block meetup_location_page_content %}
   <div class="mb40">
     {% include "meetup/snippets/users-grid.html" with users="Organizers" user_list=object.organizers.all %}
-    {% include "meetup/snippets/users-grid.html" with users="Members" user_list=object.members.all %}
-  </div>
+    {% include "meetup/snippets/users-grid.html" with users="Members" user_list=object.members.all non_user_list=object.organizers.all %}
+ </div>
   {% include "blog/snippets/pagination.html" %}
 {% endblock %}
