--- a/systers_portal/templates/meetup/snippets/users-grid.html
+++ b/systers_portal/templates/meetup/snippets/users-grid.html
@@ -1,16 +1,32 @@
 <div class="row mt20">
   <h2 class="ml15"> {{ users }} </h2>
   <div class="col-xs-3">
-  {% for user in user_list %}
-    {% include "meetup/snippets/user-cell.html" with user=user %}
-    </div>
-    {% if forloop.counter|divisibleby:4 %}
+  {% if non_user_list %} 
+    {% for user in user_list %}
+      {% if user not in non_user_list %}
+        {% include "meetup/snippets/user-cell.html" with user=user %}
+        </div>
+        {% if forloop.counter|divisibleby:4 %}
+          </div>
+          <div class="row mt40">
+          <div class="col-xs-3">
+        {% else %}
+          <div class="col-xs-3">
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+  {% else %}
+    {% for user in user_list %}
+      {% include "meetup/snippets/user-cell.html" with user=user %}
       </div>
-      <div class="row mt40">
-      <div class="col-xs-3">
-    {% else %}
-      <div class="col-xs-3">
-    {% endif %}
-  {% endfor %}
+      {% if forloop.counter|divisibleby:4 %}
+        </div>
+        <div class="row mt40">
+        <div class="col-xs-3">
+      {% else %}
+        <div class="col-xs-3">
+      {% endif %}
+    {% endfor %}
+  {% endif %}
   </div>
 </div>
