--- a/systers_portal/templates/meetup/snippets/user-cell.html
+++ b/systers_portal/templates/meetup/snippets/user-cell.html
@@ -14,4 +14,8 @@
   <a href="{{ user.get_absolute_url }}">
     <p class="text-center"> {{ user }} </p>
   </a>
+  {% if users == "Members" %}
+    <a href="#" role="button" class="btn btn-danger btn-xs">Remove</a>
+    <a href="#" role="button" class="btn btn-primary btn-xs">Make Organiser</a>
+  {% endif %}
 </div>
