--- a/systers_portal/templates/meetup/sponsors.html
+++ b/systers_portal/templates/meetup/sponsors.html
@@ -1,9 +1,9 @@
 {% extends "meetup/base.html" %}
 
 {% block meetup_location_page_content %}
-  <div class="box-container">
-    <h3>Sponsors</h3>
-    <div class="box-body">
+  <div class="mt20 mb40">
+    <h2 class="ml15"> Sponsors </h2>
+    <div class="mt20 ml15 box-container box-body">
       {{ meetup_location.sponsors|safe }}
     </div>
   </div>
