--- a/systers_portal/templates/meetup/snippets/user-cell.html
+++ b/systers_portal/templates/meetup/snippets/user-cell.html
@@ -15,7 +15,7 @@
     <p class="text-center"> {{ user }} </p>
   </a>
   {% if users == "Members" %}
-    <a href="#" role="button" class="btn btn-danger btn-xs">Remove</a>
+    <a href="{% url "remove_member_meetup_location" meetup_location.slug user.user.username %}" role="button" class="btn btn-danger btn-xs">Remove</a>
     <a href="#" role="button" class="btn btn-primary btn-xs">Make Organiser</a>
   {% endif %}
 </div>
