--- a/systers_portal/templates/meetup/snippets/meetup_sidebar.html
+++ b/systers_portal/templates/meetup/snippets/meetup_sidebar.html
@@ -1,22 +1,21 @@
 {% load guardian_tags %}
 
 {% if user.is_authenticated and user.is_active %}
-  {% get_obj_perms user for meetup_location as "meetup_location_perms" %}
-    <div class="sidebar-module mb40">
-      <h4>Meetup Actions</h4>
-      <ol class="list-unstyled">
-        {% if "add_meetup" in meetup_location_perms %}
-          <li><a href="{% url 'add_meetup' meetup_location.slug %}">Add New Meetup</a></li>
-        {% endif %}
-        {% if meetup.slug %}
-          {% get_obj_perms user for meetup as "meetup_perms" %}
-            {% if "change_meetup" in meetup_perms %}
-              <li><a href="{% url 'edit_meetup' meetup_location.slug meetup.slug %}">Edit Meetup</a></li>
-            {% endif %}
-            {% if "delete_meetup" in meetup_perms %}
-              <li><a href="{% url 'delete_meetup' meetup_location.slug meetup.slug %}">Delete Meetup</a></li>
-            {% endif %}
-        {% endif %}
-      </ol>
-    </div>
+  {% if meetup.slug %}
+    {% get_obj_perms user for meetup as "meetup_perms" %} 
+  {% endif %}
+  <div class="sidebar-module mb40">
+    <h4>Meetup Actions</h4>
+    <ol class="list-unstyled">
+      {% if "add_meetup" in meetup_perms %}
+        <li><a href="{% url 'add_meetup' meetup_location.slug %}">Add New Meetup</a></li>
+      {% endif %}
+      {% if "change_meetup" in meetup_perms %}
+        <li><a href="{% url 'edit_meetup' meetup_location.slug meetup.slug %}">Edit Meetup</a></li>
+      {% endif %}
+      {% if "delete_meetup" in meetup_perms %}
+        <li><a href="{% url 'delete_meetup' meetup_location.slug meetup.slug %}">Delete Meetup</a></li>
+      {% endif %}
+    </ol>
+  </div>
 {% endif %}
