--- a/systers_portal/templates/meetup/meetup.html
+++ b/systers_portal/templates/meetup/meetup.html
@@ -13,5 +13,22 @@
     </p>
     <hr>
     {{ meetup.description|safe }} <br/>
+    <a href="{% url 'add_meetup_comment' meetup_location.slug meetup.slug %}">Add comment</a>
   </div>
+  <h3>Discussion Area</h3>
+  {% if not comments %}
+    <div class="box-container box-body pt25">
+      <p>
+        <i>There are no comments yet.</i>
+      </p>
+    </div>
+  {% endif %}
+  {% for comment in comments %}
+    <div class="box-container pt25">
+      <a href="{{ comment.author.get_absolute_url }}">{{ comment.author}}</a>
+      <div class="box-body">
+        <p>{{ comment.body }}</p>
+      </div>
+    </div>
+  {% endfor %}
 {% endblock %}
