edit and delete comments

--- a/systers_portal/templates/meetup/meetup.html
+++ b/systers_portal/templates/meetup/meetup.html
@@ -29,6 +29,8 @@
       <div class="box-body">
         <p>{{ comment.body }}</p>
       </div>
+      <a href="{% url 'edit_meetup_comment' meetup_location.slug meetup.slug comment.id %}">edit</a>
+      <a href="{% url 'delete_meetup_comment' meetup_location.slug meetup.slug comment.id %}">delete</a>
     </div>
   {% endfor %}
 {% endblock %}
