--- a/systers_portal/templates/meetup/edit_comment.html
+++ b/systers_portal/templates/meetup/edit_comment.html
@@ -1,7 +1,7 @@
 {% extends "meetup/base.html" %}
 
 {% block title %}
-  Add comment to {{ content_object }}
+  Edit comment for {{ content_object }}
 {% endblock %}
 
 {% load crispy_forms_tags %}
@@ -10,7 +10,7 @@
   <div class="mt20 mb40"></div>
   <div class="row ml20">
     <div class="col-md-12">
-      <h2>Add comment to {{ content_object }}</h2>
+      <h2>Edit comment for {{ content_object }}</h2>
       <hr/>
     </div>
     <div class="col-md-12">
