--- a/systers_portal/templates/meetup/snippets/meetup_sidebar.html
+++ b/systers_portal/templates/meetup/snippets/meetup_sidebar.html
@@ -7,17 +7,18 @@
   <div class="sidebar-module mb40">
     <h4>Meetup Actions</h4>
     <ol class="list-unstyled">
-      {% if "add_meetup" in meetup_perms %}
-        <li><a href="{% url 'add_meetup' meetup_location.slug %}">Add New Meetup</a></li>
-      {% endif %}
       {% if "change_meetup" in meetup_perms %}
         <li><a href="{% url 'edit_meetup' meetup_location.slug meetup.slug %}">Edit Meetup</a></li>
       {% endif %}
       {% if "delete_meetup" in meetup_perms %}
         <li><a href="{% url 'delete_meetup' meetup_location.slug meetup.slug %}">Delete Meetup</a></li>
       {% endif %}
+      {% if "add_meetup" in meetup_perms %}
+        <li><a href="{% url 'add_meetup' meetup_location.slug %}">Add New Meetup</a></li>
+      {% endif %}
       {% if meetup.slug %}
-        <li><a href="{% url "rsvp_meetup" meetup_location.slug meetup.slug %}">RSVP</a></li>
+        <li><a href="{% url 'rsvp_meetup' meetup_location.slug meetup.slug %}">RSVP</a></li>
+        <li><a href="{% url 'rsvp_going' meetup_location.slug meetup.slug %}">Show Members Going</a></li>
       {% endif %}
     </ol>
   </div>
