--- a/systers_portal/templates/meetup/snippets/meetup_sidebar.html
+++ b/systers_portal/templates/meetup/snippets/meetup_sidebar.html
@@ -19,6 +19,11 @@
       {% if meetup.slug %}
         <li><a href="{% url 'rsvp_meetup' meetup_location.slug meetup.slug %}">RSVP</a></li>
         <li><a href="{% url 'rsvp_going' meetup_location.slug meetup.slug %}">Show Members Going</a></li>
+        <li><a href="{% url 'add_support_request' meetup_location.slug meetup.slug %}">Add Support Request</a></li>
+      {% endif %}
+      {% if support_request.pk %}
+        <li><a href="{% url 'edit_support_request' meetup_location.slug meetup.slug support_request.pk %}">Edit Support Request</a></li>
+        <li><a href="{% url 'delete_support_request' meetup_location.slug meetup.slug support_request.pk %}">Delete Support Request</a></li>
       {% endif %}
     </ol>
   </div>
