--- a/systers_portal/templates/meetup/snippets/meetup_location_sidebar.html
+++ b/systers_portal/templates/meetup/snippets/meetup_location_sidebar.html
@@ -5,13 +5,13 @@
     <div class="sidebar-module mb40">
       <h4>Meetup Location Actions</h4>
       <ol class="list-unstyled">
-        {% if "change_meetuplocation" in meetup_location_perms %}
+        {% if perms.meetup.change_meetuplocation %}
           <li><a href="{% url 'edit_meetup_location' meetup_location.slug %}">Edit Meetup Location</a></li>
         {% endif %}
-        {% if "delete_meetuplocation" in meetup_location_perms %}
+        {% if perms.meetup.delete_meetuplocation %}
           <li><a href="{% url 'delete_meetup_location' meetup_location.slug %}">Delete Meetup Location</a></li>
         {% endif %}
-        {% if "add_meetuplocation" in meetup_location_perms %}
+        {% if perms.meetup.add_meetuplocation %}
           <li><a href="{% url 'add_meetup_location' %}">Add New Meetup Location</a></li>
         {% endif %}
         {% if "add_meetup_location_member" in meetup_location_perms %}
