templates for notifications

--- a/systers_portal/templates/meetup/list_support_requests.html
+++ b/systers_portal/templates/meetup/list_support_requests.html
@@ -3,13 +3,15 @@
 {% block meetup_location_page_content %}
   <div class="mt20 mb40">
     <h2 class="ml15">Support Requests</h2>
-    {% for support_request in support_requests %}
+    {% for support_request in supportrequest_list %}
       <div class="mt20 ml15 box-container box-body">
         <p>
           <span><strong>Volunteer:</strong> {{ support_request.volunteer }}</span>
         </p>
         <p>
           {{ support_request.description|safe|truncatewords:30 }}
+        </p>
+        <p>
           <a href="{% url "view_support_request" meetup_location.slug meetup.slug support_request.pk %}">SEE MORE</a>
         </p>
       </div>
