--- a/systers_portal/templates/meetup/snippets/user-cell.html
+++ b/systers_portal/templates/meetup/snippets/user-cell.html
@@ -2,28 +2,37 @@
 
 {% load guardian_tags %}
 
-{% get_obj_perms user for meetup_location as "meetup_location_perms" %}
-  <div class="user-cell-wh-100">
-    {% if systersuser.profile_picture.name and systersuser.profile_picture.name != "False" %}
-      <a href="{{ systersuser.get_absolute_url }}">
-        <img src="{{ systersuser.profile_picture_thumbnail.url }}" class="img-responsive" alt="{{ systersuser }} profile picture"/>
-      </a>
-    {% else %}
-      <a href="{{ systersuser.get_absolute_url }}">      
-        <img src="{% static 'img/default.png' %}" class=""
-        alt="{{ systersuser }} profile picture"/>
-      </a>
-    {% endif %}
+{% if user.is_authenticated and user.is_active %}
+  {% get_obj_perms user for meetup_location as "meetup_location_perms" %}
+{% endif %}
+
+<div class="user-cell-wh-100">
+  {% if systersuser.profile_picture.name and systersuser.profile_picture.name != "False" %}
     <a href="{{ systersuser.get_absolute_url }}">
-      <p class="text-center"> {{ systersuser }} </p>
+      <img src="{{ systersuser.profile_picture_thumbnail.url }}" class="img-responsive" alt="{{ systersuser }} profile picture"/>
     </a>
-    {% if "delete_meetup_location_member" in meetup_location_perms %}
-      <a href="{% url "remove_member_meetup_location" meetup_location.slug systersuser.user.username %}" role="button" class="btn btn-danger btn-xs">Remove</a>
-    {% endif %}
-    {% if users == "Members" and "add_meetup_location_organizer" in meetup_location_perms %}
-      <a href="{% url "make_organizer_meetup_location" meetup_location.slug systersuser.user.username %}" role="button" class="btn btn-primary btn-xs">Make Organizer</a>
-    {% endif %}
-    {% if users == "Organizers" and "delete_meetup_location_organizer" in meetup_location_perms %}
-      <a href="{% url "remove_organizer_meetup_location" meetup_location.slug systersuser.user.username %}" role="button" class="btn btn-warning btn-xs">Remove Organizer</a>
-    {% endif %}
+  {% else %}
+    <a href="{{ systersuser.get_absolute_url }}">      
+      <img src="{% static 'img/default.png' %}" class=""
+      alt="{{ systersuser }} profile picture"/>
+    </a>
+  {% endif %}
+  <a href="{{ systersuser.get_absolute_url }}">
+    <p class="text-center"> {{ systersuser }} </p>
+  </a>
+  {% if "delete_meetup_location_member" in meetup_location_perms %}
+    <a href="{% url "remove_member_meetup_location" meetup_location.slug systersuser.user.username %}" role="button" class="btn btn-danger btn-xs">
+      Remove
+    </a>
+  {% endif %}
+  {% if users == "Members" and "add_meetup_location_organizer" in meetup_location_perms %}
+    <a href="{% url "make_organizer_meetup_location" meetup_location.slug systersuser.user.username %}" role="button" class="btn btn-primary btn-xs">
+      Make Organizer
+    </a>
+  {% endif %}
+  {% if users == "Organizers" and "delete_meetup_location_organizer" in meetup_location_perms %}
+    <a href="{% url "remove_organizer_meetup_location" meetup_location.slug systersuser.user.username %}" role="button" class="btn btn-warning btn-xs">
+      Remove Organizer
+    </a>
+  {% endif %}
 </div>
